BDOG-3188 add PROJECTS_ROOT_FOLDER environment config

--- a/src/sbt-test/sbt-build-jobs/writeProjects-multimodule/.env
+++ b/src/sbt-test/sbt-build-jobs/writeProjects-multimodule/.env
@@ -1,2 +1,2 @@
 export PROJECTS_FILENAME="projects.yaml"
-export GIT_URL=https://github.com/hmrc/writeProjects.git
+export PROJECTS_ROOT_FOLDER="_MODIFIED_ROOT_"
